[package]
edition = "2021"
name = "lockfreed"
version = "0.1.0"
description = "This crate provides concurrent data structures."
repository = "https://github.com/gelfand/lockfreed"
keywords = ["concurrency", "lock-free", "atomics", "data-structures"]
categories = ["concurrency", "data-structures", "algorithms"]

[dependencies]
crossbeam = { git = "https://github.com/crossbeam-rs/crossbeam", features = [
    "nightly",
] }

[features]
default = ["nightly"]
nightly = []
std = []
alloc = []
